Feat: API url update new-playlist.html

--- a/new-playlist.html
+++ b/new-playlist.html
@@ -141,7 +141,7 @@
         }
 
         async function api_request(route, method, form_data) {
-            const API = "http://127.0.0.1:8000";
+            const API = "https://apimusic.predelli.site";
             const API_ROUTE = API + "/" + route;
             try {
                 console.log(get_template_form(method, form_data))
@@ -159,5 +159,6 @@
         }
     </script>
 </body>
+
 
 </html>
