--- a/new-song.html
+++ b/new-song.html
@@ -108,7 +108,7 @@
         }
 
         async function api_request(route, method, form_data) {
-            const API = "http://127.0.0.1:8000";
+            const API = "https://apimusic.predelli.site";
             const API_ROUTE = API + "/" + route;
             try {
                 const response = await fetch(API_ROUTE, get_template_form(method, form_data));
@@ -125,5 +125,6 @@
         }
     </script>
 </body>
+
 
 </html>
