Feat: music autoplay stream.html

--- a/stream.html
+++ b/stream.html
@@ -10,7 +10,7 @@
     <input type="checkbox" id="random" name="random">
     <label for="random">random</label> <br>
     <button id="skip">skip</button> <br>
-    <audio id="player" controls></audio>
+    <audio id="player" controls autoplay></audio>
 
     <script>
         // get info for API request
@@ -153,3 +153,4 @@
 
 
 </html>
+
