--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
         <input type="submit">
     </form>
 
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/api.js"></script>
     <script>
         const form = document.getElementById("login-form");
 
@@ -31,33 +33,10 @@
             }
         });
 
-        function get_template_form(meth, form_data) {
-            return {
-                method: meth,
-                body: form_data
-            }
-        }
-
-        async function api_request(route, method, form_data) {
-            const API = "https://apimusic.predelli.site";
-            const API_ROUTE = API + "/" + route;
-            try {
-                const response = await fetch(API_ROUTE, get_template_form(method, form_data));
-                if (!response.ok) {
-                    throw new Error("Response status :" + response.status);
-                }
-
-                const result = await response.json();
-
-                return result;
-            } catch (error) {
-                console.error(error.message);
-            }
-        }
-
     </script>
 </body>
 
 
 </html>
+
 
