--- a/musics.html
+++ b/musics.html
@@ -23,6 +23,8 @@
 
     <div id="music-container"></div>
 
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/api.js"></script>
     <script>
         const params = new URLSearchParams(window.location.search);
         let playlist;
@@ -98,30 +100,6 @@
             })
         }
 
-        function get_template_form(meth, form_data) {
-            return {
-                method: meth,
-                body: form_data
-            }
-        }
-
-        async function api_request(route, method, form_data) {
-            const API = "https://apimusic.predelli.site";
-            const API_ROUTE = API + "/" + route;
-            try {
-                const response = await fetch(API_ROUTE, get_template_form(method, form_data));
-                if (!response.ok) {
-                    throw new Error("Response status :" + response.status);
-                }
-
-                const result = await response.json();
-
-                return result;
-            } catch (error) {
-                console.error(error.message);
-            }
-        }
-
         random_play.addEventListener("click", function () {
             let queue = JSON.parse(sessionStorage.getItem("queue"));
             let random_index = Math.floor(Math.random() * queue.length);
@@ -137,3 +115,4 @@
 
 
 </html>
+
