--- a/new-playlist.html
+++ b/new-playlist.html
@@ -25,7 +25,8 @@
         <div id="music-container"></div>
     </form>
 
-
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/api.js"></script>
     <script>
         const form = document.getElementById("new-playlist-form");
         const search_bar = document.getElementById("search");
@@ -132,33 +133,9 @@
                 })
             })
         }
-
-        function get_template_form(meth, form_data) {
-            return {
-                method: meth,
-                body: form_data
-            }
-        }
-
-        async function api_request(route, method, form_data) {
-            const API = "https://apimusic.predelli.site";
-            const API_ROUTE = API + "/" + route;
-            try {
-                console.log(get_template_form(method, form_data))
-                const response = await fetch(API_ROUTE, get_template_form(method, form_data));
-                if (!response.ok) {
-                    throw new Error("Response status :" + response.status);
-                }
-
-                const result = await response.json();
-
-                return result;
-            } catch (error) {
-                console.error(error.message);
-            }
-        }
     </script>
 </body>
 
 
 </html>
+
