--- a/new-song.html
+++ b/new-song.html
@@ -24,6 +24,8 @@
 
     <div id="music-container"></div>
 
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/api.js"></script>
     <script>
         const search_bar = document.getElementById("search");
         const form = document.getElementById("search-form");
@@ -105,4 +107,5 @@
 
 
 </html>
+
 
