--- a/stream.html
+++ b/stream.html
@@ -12,6 +12,8 @@
     <button id="skip">skip</button> <br>
     <audio id="player" controls autoplay></audio>
 
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/api.js"></script>
     <script>
         // get info for API request
         const query_params = new URLSearchParams(window.location.search);
@@ -151,6 +153,7 @@
 
 
 </html>
+
 
 
 
