--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </div>
     </div>
 
+    <a href="musics.html?playlist=music"><button>all music</button></a>
+
     <script src="scripts/utils.js"></script>
     <script src="scripts/api.js"></script>
     <script>
@@ -88,5 +90,6 @@
 
     </script>
 </body>
+
 
 </html>
