--- a/musics.html
+++ b/musics.html
@@ -115,6 +115,12 @@
             }
         });
 
+        queue_container.addEventListener("click", e => {
+            if (e.target.tagName === "P") {
+                play(e.target.dataset.id);
+            }
+        });
+        
         // handling search
         search_bar.addEventListener("keyup", function () {
 
@@ -162,6 +168,7 @@
                 queue.forEach(track_id => {
                     const p = document.createElement("p");
                     p.innerText = tracks_info.get(track_id)[0];
+                    p.dataset.id = track_id;
                     queue_container.appendChild(p);
                 })
             } else {
@@ -210,5 +217,6 @@
         })
     </script>
 </body>
+
 
 </html>
